fix: change UI on tablet and mobile

--- a/src/features/products/components/Images/Images.scss
+++ b/src/features/products/components/Images/Images.scss
@@ -45,35 +45,24 @@
 }
 
 @media (max-width: 991.98px) {
-  .images__block {
-    grid-template-rows: repeat(3, 150px);
-  }
-}
-
-@media (max-width: 767.98px) {
-  .images__block {
-    gap: 1rem;
-  }
-}
-
-@media (max-width: 575.98px) {
   .images {
     width: 100%;
 
     &__block {
       grid-template-columns: 1fr 1fr 1fr;
-      grid-template-rows: repeat(2, 150px);
+      grid-template-rows: repeat(2, 200px);
+      gap: 1.5rem;
     }
   }
 }
 
-@media (max-width: 449.98px) {
+@media (max-width: 767.98px) {
   .images__block {
-    grid-template-rows: repeat(2, 100px);
+    grid-template-rows: repeat(2, 150px);
   }
 }
 
-@media (max-width: 399.98px) {
+@media (max-width: 575.98px) {
   .images__block {
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 100px 100px 125px;
