--- a/src/features/products/components/ProductInfo/ProductInfo.scss
+++ b/src/features/products/components/ProductInfo/ProductInfo.scss
@@ -99,6 +99,7 @@
   font-family: $font-secondary;
   @include font(600, 0.75rem, 1.125rem);
   color: $color-gray;
+  text-decoration: line-through;
 }
 
 @media (max-width: 1099.98px) {
@@ -114,33 +115,34 @@
 
 @media (max-width: 991.98px) {
   .product-info {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+
     &__title {
-      font-size: 1.5rem;
-      line-height: 2rem;
+      text-align: center;
     }
 
     &__stat {
-      margin-bottom: 1.5rem;
+      justify-content: center;
     }
 
     &__description {
-      @include text-overflow-rows(5);
-      margin-bottom: 1.5rem;
+      text-align: center;
+    }
+
+    &__order {
+      margin: 0 auto 1.5rem;
+      min-width: 200px;
+      padding: 0.75rem;
+      width: fit-content;
+      flex-wrap: wrap;
+      justify-content: center;
     }
 
     &__datalist {
       margin-bottom: 1.5rem;
       row-gap: 0.5rem;
-
-      li {
-        width: 100%;
-      }
-    }
-
-    &__order {
-      margin-bottom: 1rem;
-      flex-wrap: wrap;
-      justify-content: center;
     }
 
     &__price {
@@ -151,11 +153,11 @@
 
   .datalist {
     &__category {
-      width: 120px;
+      width: 100px;
     }
 
     &__value {
-      width: calc(100% - 130px);
+      width: calc(100% - 110px);
     }
   }
 
@@ -173,11 +175,16 @@
 @media (max-width: 767.98px) {
   .product-info {
     &__title {
-      font-size: 1.2rem;
-      line-height: 1.5rem;
+      font-size: 1.5rem;
+      line-height: 2rem;
+    }
+
+    &__stat {
+      margin-bottom: 1.5rem;
     }
 
     &__description {
+      margin-bottom: 1.5rem;
       font-size: 0.95rem;
       line-height: 1.3rem;
     }
@@ -185,11 +192,40 @@
     &__datalist {
       row-gap: 0.4rem;
     }
+  }
+}
 
+@media (max-width: 575.98px) {
+  .product-info {
+    &__title {
+      font-size: 1.2rem;
+      line-height: 1.5rem;
+    }
+
+    &__datalist {
+      li {
+        width: 100%;
+        justify-content: center;
+        gap: 1rem;
+      }
+    }
+  }
+
+  .datalist {
+    &__category {
+      width: 120px;
+    }
+
+    &__value {
+      width: 150px;
+      text-align: right;
+    }
+  }
+}
+
+@media (max-width: 399.98px) {
+  .product-info {
     &__order {
-      min-width: 200px;
-      padding: 0.75rem;
-      width: fit-content;
       flex-direction: column;
       gap: 1rem;
     }
@@ -198,11 +234,5 @@
       margin-bottom: 0;
       width: auto;
     }
-  }
-}
-
-@media (max-width: 575.98px) {
-  .product-info {
-    width: 100%;
   }
 }
