--- a/src/features/products/pages/ProductItem/ProductItem.scss
+++ b/src/features/products/pages/ProductItem/ProductItem.scss
@@ -7,7 +7,7 @@
   }
 }
 
-@media (max-width: 575.98px) {
+@media (max-width: 991.98px) {
   .product {
     flex-direction: column;
     gap: 1rem;
